# particle-furnace

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  flash
firmware/: CMakeLists.txt  application.cpp  config.hpp  db.hpp  events.hpp  fsm.cpp  fsm.hpp  pl.hpp  states.cpp  states.hpp
test/: CMakeLists.txt  TestTests.cpp
